--- a/index.html
+++ b/index.html
@@ -3,6 +3,67 @@ layout: default
 title: Home
 ---
 
+<section class="featured-posts">
+    <div class="section-title">
+        <h2><span>About Me</span></h2>
+    </div>
+    <div class="row">
+        <div class="col-md-6 mb-30px">
+            <div class="listfeaturedtag h-100">
+                <div class="row h-100">
+                    <div class="col-lg-5 col-md-12 pr-lg-0">
+                        <div class="h-100">
+                            <div class="wrapthumbnail">
+                                <a href="{{ post.url | absolute_url }}">
+                            <span class="thumbnail" style="background-size: 60%; background-image:url('assets/images/linkedin-large.png');">
+                            </span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-12">
+                        <div class="h-100 card-group">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h2 class="card-title"><a class="text-dark" href="https://www.linkedin.com/in/petr-bouda/">My Career</a></h2>
+                                    <h4 class="card-text"><a class="text-dark" href="https://www.linkedin.com/in/petr-bouda/">Even the press, the classroom, the platform, and the pulpit in many instances do not give us objective and unbiased truths. To save man from...</a></h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-30px">
+            <div class="listfeaturedtag h-100">
+                <div class="row h-100">
+                    <div class="col-lg-7 col-md-12">
+                        <div class="h-100 card-group">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h2 class="card-title"><a class="text-dark" href="https://github.com/petrbouda">When I code</a></h2>
+                                    <h4 class="card-text"><a class="text-dark" href="https://github.com/petrbouda">Even the press, the classroom, the platform, and the pulpit in many instances do not give us objective and unbiased truths. To save man from...</a></h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-12 pr-lg-0">
+                        <div class="h-100">
+                            <div class="wrapthumbnail">
+                                <a href="{{ post.url | absolute_url }}">
+                            <span class="thumbnail" style="background-size: 60%; background-image:url('assets/images/github-large.png');">
+                            </span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
