--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ title: Home
                     <div class="col-lg-5 col-md-12 pr-lg-0">
                         <div class="h-100">
                             <div class="wrapthumbnail">
-                                <a href="{{ post.url | absolute_url }}">
-                            <span class="thumbnail" style="background-size: 60%; background-image:url('assets/images/linkedin-large.png');">
-                            </span>
+                                <a href="https://www.linkedin.com/in/petr-bouda/">
+                                    <span class="thumbnail" style="background-size: 60%; background-image:url('assets/images/linkedin-large.png');">
+                                    </span>
                                 </a>
                             </div>
                         </div>
@@ -51,9 +51,9 @@ title: Home
                     <div class="col-lg-5 col-md-12 pr-lg-0">
                         <div class="h-100">
                             <div class="wrapthumbnail">
-                                <a href="{{ post.url | absolute_url }}">
-                            <span class="thumbnail" style="background-size: 60%; background-image:url('assets/images/github-large.png');">
-                            </span>
+                                <a href="https://github.com/petrbouda">
+                                    <span class="thumbnail" style="background-size: 60%; background-image:url('assets/images/github-large.png');">
+                                    </span>
                                 </a>
                             </div>
                         </div>
