--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
       <h1 class="mb-0">Petr
         <span class="text-primary">Bouda</span>
       </h1>
-      <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-        <a href="mailto:name@email.com">name@email.com</a>
+
+      <div class="subheading mb-5">+420 603 423 530
+        <a href="mailto:name@email.com">bouda.petr@gmail.com</a>
       </div>
-      <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
       <div class="social-icons">
         <a href="#">
           <i class="fab fa-linkedin-in"></i>
