--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
         <a class="nav-link js-scroll-trigger" href="#about">About</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#courses">courses</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
       </li>
     </ul>
@@ -71,17 +74,16 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
     </div>
   </section>
 
-
   <hr class="m-0">
 
-  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="courses">
     <div class="w-100">
-      <h2 class="mb-5">Experience</h2>
+      <h2 class="mb-5">Courses</h2>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
-          <h3 class="mb-0">Senior Web Developer</h3>
-          <div class="subheading mb-3">Intelitec Solutions</div>
+          <h3 class="mb-0">Freelancer</h3>
+          <!--          <div class="subheading mb-3">Intelitec Solutions</div>-->
           <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
         </div>
         <div class="resume-date text-md-right">
@@ -91,8 +93,8 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
-          <h3 class="mb-0">Web Developer</h3>
-          <div class="subheading mb-3">Intelitec Solutions</div>
+          <h3 class="mb-0">Software Developer</h3>
+          <div class="subheading mb-3">eBay Classifieds Group</div>
           <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
         </div>
         <div class="resume-date text-md-right">
@@ -102,8 +104,8 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
-          <h3 class="mb-0">Junior Web Designer</h3>
-          <div class="subheading mb-3">Shout! Media Productions</div>
+          <h3 class="mb-0">Software Developer</h3>
+          <div class="subheading mb-3">Oracle</div>
           <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
         </div>
         <div class="resume-date text-md-right">
@@ -113,8 +115,62 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
         <div class="resume-content">
-          <h3 class="mb-0">Web Design Intern</h3>
-          <div class="subheading mb-3">Shout! Media Productions</div>
+          <h3 class="mb-0">Junior Software Developer</h3>
+          <div class="subheading mb-3">T-Mobile</div>
+          <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">September 2008 - June 2010</span>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <div class="w-100">
+      <h2 class="mb-5">Experience</h2>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0">Freelancer</h3>
+<!--          <div class="subheading mb-3">Intelitec Solutions</div>-->
+          <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">March 2013 - Present</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0">Software Developer</h3>
+          <div class="subheading mb-3">eBay Classifieds Group</div>
+          <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">December 2011 - March 2013</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0">Software Developer</h3>
+          <div class="subheading mb-3">Oracle</div>
+          <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">July 2010 - December 2011</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-content">
+          <h3 class="mb-0">Junior Software Developer</h3>
+          <div class="subheading mb-3">T-Mobile</div>
           <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
         </div>
         <div class="resume-date text-md-right">
