--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        <a class="nav-link js-scroll-trigger" href="#courses">courses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#courses">courses</a>
+        <a class="nav-link js-scroll-trigger" href="#about">Contact</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -55,39 +55,23 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
 <div class="container-fluid p-0">
 
-  <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
-    <div class="w-100">
-      <div style="float: left">
-        <h1 class="mb-0">Petr
-          <span class="text-primary">Bouda</span>
-        </h1>
-
-        <div class="subheading mb-5">+420 603 423 530
-          <a href="mailto:name@email.com">bouda.petr@gmail.com</a>
-        </div>
-      </div>
-
-      <div style="padding-top: 7px">
-        <a style="padding-left: 50px" href="https://www.linkedin.com/in/petr-bouda/"><img width="70px" src="assets/images/linkedin-large.png"/></a>
-        <a style="padding-left: 10px" href="https://www.linkedin.com/in/petr-bouda/"><img width="70px" src="assets/images/github-large.png"/></a>
-      </div>
-    </div>
-  </section>
-
-  <hr class="m-0">
-
   <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="courses">
     <div class="w-100">
       <h2 class="mb-5">Courses</h2>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-        <div class="resume-content">
+        <div class="resume-content" style="padding: 10px">
           <h3 class="mb-0">Freelancer</h3>
-          <!--          <div class="subheading mb-3">Intelitec Solutions</div>-->
-          <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+          <div class="subheading mb-3">Intelitec Solutions</div>
+          <img width="150px" style="float: left" src="assets/images/docker-java.png">
+          <p style="text-align: justify">Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
         </div>
-        <div class="resume-date text-md-right">
-          <span class="text-primary">March 2013 - Present</span>
+
+        <div class="resume-content" style="padding: 10px">
+          <h3 class="mb-0">Freelancer</h3>
+          <div class="subheading mb-3">Intelitec Solutions</div>
+          <img width="150px" style="float: left" src="assets/images/elk.png">
+          <p style="text-align: justify">Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
         </div>
       </div>
 
@@ -126,6 +110,27 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
     </div>
 
+  </section>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+    <div class="w-100">
+      <div style="float: left">
+        <h1 class="mb-0">Petr
+          <span class="text-primary">Bouda</span>
+        </h1>
+
+        <div class="subheading mb-5">+420 603 423 530
+          <a href="mailto:name@email.com">bouda.petr@gmail.com</a>
+        </div>
+      </div>
+
+      <div style="padding-top: 7px">
+        <a style="padding-left: 50px" href="https://www.linkedin.com/in/petr-bouda/"><img width="70px" src="assets/images/linkedin-large.png"/></a>
+        <a style="padding-left: 10px" href="https://www.linkedin.com/in/petr-bouda/"><img width="70px" src="assets/images/github-large.png"/></a>
+      </div>
+    </div>
   </section>
 
   <hr class="m-0">
