--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
+  <style>
+    .zoom:hover {
+      transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    }
+  </style>
 </head>
 
 <body id="page-top"><script id="__bs_script__">//<![CDATA[
@@ -29,6 +34,24 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+
+  <div class="w-100">
+    <div style="float: left;">
+      <h1 class="mb-0" style="font-size: 40px">Petr
+        <span style="font-size: 40px; color: white">Bouda</span>
+      </h1>
+
+      <div class="subheading mb-3" style="color: white">+420 603 423 530
+        <a style="color: white" href="mailto:bouda.petr@gmail.com">bouda.petr@gmail.com</a>
+      </div>
+
+      <div>
+        <a href="https://www.linkedin.com/in/petr-bouda/"><img class="zoom" width="50px" src="img/linkedin-large.png"/></a>
+        <a href="https://www.github.com/petrbouda"><img class="zoom" width="50px" src="img/github-large.png"/></a>
+      </div>
+    </div>
+  </div>
+
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Petr Bouda</span>
     <span class="d-none d-lg-block">
@@ -38,6 +61,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
