--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
 
-  <div class="w-100">
+  <div class="w-100 d-none d-lg-block">
     <div style="float: left;">
       <h1 class="mb-0" style="font-size: 40px">Petr
         <span style="font-size: 40px; color: white">Bouda</span>
@@ -45,7 +45,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
         <a style="color: white" href="mailto:bouda.petr@gmail.com">bouda.petr@gmail.com</a>
       </div>
 
-      <div>
+      <div class="d-none d-lg-block">
         <a href="https://www.linkedin.com/in/petr-bouda/"><img class="zoom" width="50px" src="img/linkedin-large.png"/></a>
         <a href="https://www.github.com/petrbouda"><img class="zoom" width="50px" src="img/github-large.png"/></a>
       </div>
@@ -85,9 +85,9 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content" style="padding-right: 20px; width: 50%">
+          <img width="90px" style="float: left; margin-right: 15px;" src="img/docker-java.png">
           <h3 class="mb-0">Docker & Java Synergy</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
-          <img width="100px" style="float: left" src="img/docker-java.png">
           <p style="text-align: justify">Bring to the table win-win survival strategies to ensure proactive domination.
             At the end of the day, going forward, a new normal that has evolved from generation X is on the runway
             heading towards a streamlined cloud solution. User generated content in real-time will have multiple
@@ -95,9 +95,9 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
         </div>
 
         <div class="resume-content" style="padding-left: 20px; width: 50%">
-          <h3 class="mb-0">Logging & Monitoring with Elastic</h3>
+          <img width="100px" style="float: left;" src="img/elk.png">
+          <h3 class="mb-0">Logging & Monitoring</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
-          <img width="100px" style="float: left" src="img/elk.png">
           <p style="text-align: justify">Bring to the table win-win survival strategies to ensure proactive domination.
             At the end of the day, going forward, a new normal that has evolved from generation X is on the runway
             heading towards a streamlined cloud solution. User generated content in real-time will have multiple
@@ -107,18 +107,18 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content" style="padding-right: 20px; width: 50%">
+          <img width="100px" style="float: left" src="img/jvm.png">
           <h3 class="mb-0">Advanced JVM</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
-          <img width="100px" style="float: left" src="img/jvm.png">
           <p style="text-align: justify">Capitalize on low hanging fruit to identify a ballpark value added activity to
             beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion
             along the information highway will close the loop on focusing solely on the bottom line.</p>
         </div>
 
         <div class="resume-content" style="padding-left: 20px; width: 50%">
+          <img width="100px" style="float: left" src="img/modularity.png">
           <h3 class="mb-0">Java Modularity</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
-          <img width="100px" style="float: left" src="img/modularity.png">
           <p style="text-align: justify">Podcasting operational change management inside of workflows to establish
             a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your
             eye on the ball while performing a deep dive on the start-up mentality to derive convergence on
@@ -128,9 +128,9 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.26.3
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content" style="padding-right: 20px; width: 50%">
+          <img width="100px" style="float: left" src="img/gc.png">
           <h3 class="mb-0">JVM Garbage Collector</h3>
           <div class="subheading mb-3">1 day - in-house presentation</div>
-          <img width="100px" style="float: left" src="img/gc.png">
           <p style="text-align: justify">Collaboratively administrate empowered markets via plug-and-play networks.
             Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed
             convergence without revolutionary ROI.</p>
