--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       transform: scale(1.1);
     }
 
+    .resume-content .subheading {
+      color: grey;
+    }
+
     .resume-content {
       color: #0b2e13 !important;
     }
