--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Works
-description: Embark on a journey through a handpicked selection of projects that embody the essence of passion, simplicity, and creativity.
+title: Capabilities
+description: Discover all the main features and use-cases you can solve with me. Wish you good luck, and hesitate to cooperate with me! Your Jeffrey!
 ---
 
 <div class="container">
