--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Jeffrey - Java Profiling Tool for JFR Recordings" />
     <meta name="og:title" content="Jeffrey - Java Profiling Tool" />
-    <meta name="og:description" content="Jeffrey - Java Profiling Tool for JFR Recordings" />
-    <meta name="og:image" content="/images/avatar.jpg" />
+    <meta name="og:image" content="https://www.jeffrey-analyst.cafe/images/avatar.jpg" />
     <title>Jeffrey - Java Profiling Tool</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
